# convert-to-parquet-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  architecture.puml  demo.sh  pipeline_detail.puml  py_generate_test_data.py  type_inference.puml
book/: book.toml
normalized_tests/: 5438.csv  big_header.csv  blob.csv  dateformat.csv  error_invalid_type.csv  error_too_little.csv  error_too_little_end_of_filled_chunk.csv  error_too_many.csv  force_not_null.csv  force_not_null_inull.csv  force_quote.csv  invalid_utf.csv  invalid_utf_big.csv  invalid_utf_header.csv  invalid_utf_list.csv  invalid_utf_quoted.csv  invalid_utf_quoted_nl.csv  issue2518.csv  long_escaped_value.csv  long_escaped_value_unicode.csv  mixed_line_endings.csv  multi_column_integer.csv  multi_column_integer_rn.csv  multi_column_string.csv  multi_column_string_rn.csv  new_line_string.csv  new_line_string_rn.csv  new_line_string_rn_exc.csv  nfc.csv  no_newline_unicode.csv  quoted_newline.csv  struct_padding.csv  test_incompatible_type_with_nullable.csv  test_long_line.csv  test_null_option.csv  test_pipe.csv  timestampformat.csv  timestampoffset.csv  unterminated.csv  windows_newline.csv
src/: analysis.rs  csv_generator.rs  export.rs  inspect.rs  json.rs  json_arrow.rs  lib.rs  main.rs  schema.rs  to_csv.rs  to_json.rs  to_jsonl.rs  to_xlsx.rs  tui.rs  utils.rs  xlsx.rs
tests/: analysis_tests.rs  conversions_tests.rs  delimiter_tests.rs  error_analysis_tests.rs  export_formats_tests.rs  heuristic_robustness_tests.rs  integration_pipeline_tests.rs  inverse_and_inspect_tests.rs  xlsx_e2e.rs  (+8 more)
(+26 files in other folders)
